@@ -1,0 +1,4 @@
+.. _foo_1:
+
+foo/foo_1
+=========
