@@ -1,0 +1,4 @@
+.. _foo_2:
+
+foo/foo_2
+=========
