@@ -1,0 +1,9 @@
+.. _foo:
+
+foo/index
+=========
+
+.. toctree::
+
+   foo_1
+   foo_2
