@@ -1,0 +1,9 @@
+.. _index:
+
+index
+=====
+
+.. toctree::
+
+   foo/index
+   bar
